--- a/src/app/modules/employeemodule/employeerbulkadd/employeerbulkadd.component.html
+++ b/src/app/modules/employeemodule/employeerbulkadd/employeerbulkadd.component.html
@@ -10,17 +10,17 @@
 <p class="smalltext">Upload an excel file with all the the information of the Employees. Download the sample excel file to know the required format.</p>
 </div>
 <div class="col-md-9 col-xxl-9">
-    <ng-container #flowBasic="flow" [flowConfig]="{ target: '/' }"></ng-container>
+    <ng-container #flowBasic="flow" [flowConfig]="{ target: '/',singleFile: true }"></ng-container>
     <div style="padding: 10px; width: 43.75rem;">
         <div style="display: flex;flex-direction: column;">
             <div style="display: flex;flex-direction: row; padding-bottom: 5px;">
                 <div style="flex:auto;">
                     <nb-icon icon="cloud-upload" status="primary"></nb-icon>
-                     <span class="coloredsmalltext" style="cursor: pointer;">Download sample file</span>
+                     <span class="coloredsmalltext" style="cursor: pointer;" (click)="downloadSampleFile()">Download sample file</span>
                 </div>
         
             </div>
-    <div style="display: flex;justify-content: center;border: 1px dashed #CED4DA;padding: 15px;"
+    <div *ngIf="files.length < 1" style="display: flex;justify-content: center;border: 1px dashed #CED4DA;padding: 15px;"
     flow-init     
 flowDrop
 [flow]="flowBasic.flowJs"
@@ -55,7 +55,7 @@ flowDrop
     <div style="padding-top:1.5rem;">
         <div class="row">    
           <div class="col-sm-12">
-              <button style="text-transform: none !important;width: 144px;"  type="button" nbButton status="primary" >Submit</button>
+              <button (click)="uploadBulkEmployee()" [disabled]="files.length < 1" style="text-transform: none !important;width: 144px;"  type="button" nbButton status="primary" >Submit</button>
           </div>
       </div>
         </div>
