--- a/src/app/modules/manpower/capacity-planning/capacity-planning.component.html
+++ b/src/app/modules/manpower/capacity-planning/capacity-planning.component.html
@@ -55,6 +55,69 @@
           <div *ngIf="activityName.errors.required">Leave Year name is required</div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-12 form-group">
+            <label>Task Type</label>
+            <select class="form-control" name="activityTypeId" id="activityTypeId" [(ngModel)]="newcaplan.activityTypeId" #activityTypeId="ngModel" required (change)="getdate($event)">
+                <option value="">--select--</option>
+                <option value="1">Task</option>
+                <option value="2">Project</option>
+    
+              </select>
+              <div *ngIf="activityTypeId.invalid && (activityTypeId.dirty || activityTypeId.touched) " class="error">
+                <div *ngIf="(activityTypeId.errors.required || activityTypeId.errors)">
+                  Task type is required
+                </div>
+              </div>
+    
+       
+        </div>        
+        <div class="col-md-6" *ngIf="projecttask">
+            <label for="Minimum Number Of Days" style="font-size: small;font-weight: bold;">Start Date:</label>
+            <ngx-date  [(value)]='newcaplan.startDate'  #startDate [max]="newcaplan.endDate" name="startDate" id="startDate"></ngx-date>
+            <div *ngIf="!validateStartdate" class="error">
+                <div>Plan Start Date is required</div>
+            </div>  
+          </div>
+          <div class="col-md-6" *ngIf="projecttask">
+            <label for="Minimum Number Of Days" style="font-size: small;font-weight: bold;">End Date:</label>
+            <ngx-date  [(value)]='newcaplan.endDate'  #endDate [min]="newcaplan.startDate" name="endDate" id="endDate"></ngx-date>
+            <div *ngIf="!validateEnddate" class="error">
+                <div>Plan End Date is required</div>
+            </div>  
+          </div>
+
+          <div class="col-md-12">
+            <label for="Minimum Number Of Days" style="font-size: small;font-weight: bold;">Justification</label>
+            <textarea rows="5"  id="description" name="description" [(ngModel)]="newcaplan.description" nbInput fullWidth   placeholder="Enter Justification"></textarea>
+          </div> 
+          <div class="col-md-12">
+            <label style="font-size: small;font-weight: bold;">Requirements:</label>
+          </div> 
+          <div class="col-md-6" >
+            <label for="Minimum Number Of Days" style="font-size: small;font-weight: bold;">Select Job Category</label>
+            <select class="form-control" name="jobCategory" id="jobCategory" [(ngModel)]="planrequirement.jobCategory" #jobCategory="ngModel" (change)="loadselected($event)">
+                <option value="">--select--</option>
+                <option value="Job Role">Job Role</option>
+                <option value="Position">Position</option>
+                <option value="Grade">Grade</option>
+              </select>
+          </div>
+          <div class="col-md-6" >
+            <label for="Minimum Number Of Days" style="font-size: small;font-weight: bold;">Select {{planrequirement.jobCategory}} type</label>
+          
+          </div>
+          <div class="col-md-6" >
+            <label for="Minimum Number Of Days" style="font-size: small;font-weight: bold;">End Date:</label>
+          
+          </div>
+          <div class="col-md-6" >
+            <label for="Minimum Number Of Days" style="font-size: small;font-weight: bold;">End Date:</label>
+          
+          </div>
+
+
+      </div>
  </form>
     </div>
     <div modal-actions class="d-flex"
