--- a/src/app/modules/disbursement/overall-budget/overall-budget.component.html
+++ b/src/app/modules/disbursement/overall-budget/overall-budget.component.html
@@ -191,6 +191,15 @@
       <div modal-header>Add Budget Item</div>
       <div modal-body>
         <div>
+
+          <div class="row">
+            <div class="form-group col">
+              <label>Budget</label>
+              <select name="budget" id="">
+                <option *ngFor="let budget of myBudget" [value]="budget.id">{{item.financialYearStartDate	 | date : 'longDate'}} - {{item.financialYearEndDate | date : 'longDate'}}</option>
+              </select>
+            </div>
+          </div>
             <div class="row">
               <div class="form-group col">
                 <label>Budget Item</label>
