--- a/src/app/modules/disbursement/overall-budget/overall-budget.component.html
+++ b/src/app/modules/disbursement/overall-budget/overall-budget.component.html
@@ -194,8 +194,8 @@
           <div class="row">
             <div class="form-group col">
               <label>Budget</label>
-              <select name="budget"class="form-control">
-                <option *ngFor="let budget of myBudget" [value]="budget.id">{{item?.financialYearStartDate	 | date : 'longDate'}} - {{item?.financialYearEndDate | date : 'longDate'}}</option>
+              <select name="budget" class="form-control">
+                <option *ngFor="let budget of myBudget" [value]="budget.id">{{budget.financialYearStartDate	 | date : 'longDate'}} - {{budget.financialYearEndDate | date : 'longDate'}}</option>
               </select>
             </div>
           </div>
