--- a/src/app/modules/career-succession/competency/competency.component.html
+++ b/src/app/modules/career-succession/competency/competency.component.html
@@ -54,10 +54,7 @@
                 <div class="form-group row ">
                   <label for="Role" class="col-sm-3 col-form-label mylabel">Competency Title </label>
                   <div class="col-sm-8 col-md- 8 col-lg-8">
-                    <select type="text" class="form-control" name="compencyTitle" placeholder="Role Name">
-                      <option value="">--Select Role--</option>
-                      <option *ngFor="let role of AllJobRoles" value="">{{ role.name }}</option>
-                    </select>
+                    <input type="text" class="form-control" name="competencyTitle" placeholder="Title">
                   </div>
                 </div>
 
@@ -72,7 +69,7 @@
                 </div>
 
                 <div *ngIf="selectedCase=='Position'" class="form-group row ">
-                  <label for="Role" class="col-sm-3 col-form-label mylabel">Role Name</label>
+                  <label for="Role" class="col-sm-3 col-form-label mylabel">Position Name</label>
                   <div class="col-sm-8 col-md- 8 col-lg-8">
                     <select type="text" class="form-control" name="roleName" placeholder="Role Name">
                       <option value="">--Select Role--</option>
@@ -122,7 +119,7 @@
                 <div class="form-group row ">
                   <label for="Title" class="col-sm-3 col-form-label mylabel">Requirement Type</label>
                   <div class="col-sm-8 col-md- 8 col-lg-8">
-                    <select class="custom-select" name="qualificationCategory" (change)="toggleRequirement($event.target.value)" required>
+                    <select class="custom-select" name="requirementCategory" #requirementCategory="ngModel" [(ngModel)]="comRequirement.requirementCategory" (change)="toggleRequirement($event.target.value)" required>
                       <option value="">--Select Level--</option>
                       <option *ngFor="let req of requirementList" [value]="req.title">{{req.label}}</option>
                     </select>
@@ -133,9 +130,9 @@
                   <div class="col-sm-3"></div>
                   <div class="col-sm-8">
                     <div class="row" style="display: flex; justify-content: space-between; flex-direction: row;">
-                      <div *ngIf="requirement =='skills'"  class="col-sm-6">
+                      <div *ngIf="requirement =='skill'"  class="col-sm-6">
                         <label for="">Skill Type</label>
-                        <select class="custom-select" name="skills" required>
+                        <select class="custom-select" name="skillType" #skillType="ngModel" [(ngModel)]="comRequirement.skillId" required>
                         <option value="">--Select Level--</option>
                         <option *ngFor="let skill of skillData" [value]="skill.title">{{skill.name}}</option>
                       </select>
@@ -143,25 +140,33 @@
 
                       <div *ngIf="requirement =='training'" class="col-sm-6">
                         <label for="">Training Type</label>
-                        <select class="custom-select" name="training" required>
+                        <select class="custom-select" name="training" #training="ngModel" [(ngModel)]="comRequirement.trainingId" required>
                         <option value="">--Select Level--</option>
-                        <option *ngFor="let skill of skillData" [value]="skill.title">{{skill.name}}</option>
+                        <option *ngFor="let mytraining of trainingData" [value]="mytraining.title">{{mytraining.name}}</option>
                       </select>
                       </div>
 
-                      <div *ngIf="requirement =='experience'" class="col-sm-6">
+                      <div *ngIf="requirement =='certification'" class="col-sm-6">
                         <label for="">Certification Type</label>
-                        <select class="custom-select" name="certification" required>
+                        <select class="custom-select" name="certification" #certification="ngModel" [(ngModel)]="comRequirement.certificationId" required>
                         <option value="">--Select Level--</option>
-                        <option *ngFor="let skill of skillData" [value]="skill.title">{{skill.name}}</option>
+                        <option *ngFor="let cert of certificationData" [value]="cert.title">{{cert.name}}</option>
                       </select>
                       </div>
 
                       <div *ngIf="requirement =='qualification'" class="col-sm-6">
                         <label for="">Qualification Type</label>
-                        <select class="custom-select" name="qualification"  required>
+                        <select class="custom-select" name="qualification" #qualification="ngModel" [(ngModel)]="comRequirement.qualificationId"  required>
                         <option value="">--Select Level--</option>
-                        <option *ngFor="let skill of skillData" [value]="skill.title">{{skill.name}}</option>
+                        <option *ngFor="let myqualification of qualificationData" [value]="myqualification.title">{{myqualification.name}}</option>
+                      </select>
+                      </div>
+
+                      <div *ngIf="requirement =='experience'" class="col-sm-6">
+                        <label for="">Experience Type</label>
+                        <select class="custom-select" name="experience" #experience="ngModel" [(ngModel)]="comRequirement.experienceId" required>
+                        <option value="">--Select Level--</option>
+                        <option *ngFor="let exp of experienceData" [value]="exp.title">{{exp.name}}</option>
                       </select>
                       </div>
 
@@ -178,7 +183,7 @@
                   <div class="col-sm-3"></div>
                   <div class="col-sm-8">
                     <div class="row" style="display: flex; justify-content: space-between; flex-direction: row;">
-                      <div *ngIf="requirement =='skills'" class="col-sm-6">
+                      <div *ngIf="requirement =='skill'" class="col-sm-6">
                         <label for="">Skill Weight</label>
                         <input type="number" class="form-control" name="skillWeight" placeholder="Points" required>
                       </div>
@@ -203,14 +208,13 @@
                         <input type="number" class="form-control" name="experienceWeight" placeholder="12" required>
                       </div>
                     </div>
-
                   </div>
                 </div>
 
                 <div class="form-group row ">
                   <label for="Title" class="col-sm-3 col-form-label mylabel"></label>
                   <div class="col-sm-8 col-md- 8 col-lg-8">
-                    <button nbButton (click)="addQualification()" style="color: #4847E0"><i class="fas fa-plus" style="color: #4847E0; padding-right: 10px;"></i>Add More</button>
+                    <button nbButton (click)="addRequirement()" style="color: #4847E0"><i class="fas fa-plus" style="color: #4847E0; padding-right: 10px;"></i>Add More</button>
                   </div>
                 </div>
 
