--- a/src/app/modules/disbursement/budget/setup/setup.component.html
+++ b/src/app/modules/disbursement/budget/setup/setup.component.html
@@ -5,35 +5,34 @@
 <div class="main-page-container">
   <div class="my-form">
 <ng-template [ngIf]="page === 1">
-    <h4>Set up your overall budget</h4>
  <form #budgetForm="ngForm" name="budgetForm">
-  <div class="row">
-    <div class="col-sm-6 linear-form">
+  <h6>Set up your overall budget</h6>
       <div class="form-group row">
-        <div class="col">
+        <div class="col-sm-8">
           <label>Financial Year</label>
-        <ngx-date-range style="width: 60%;" [(start)]="budget.financialYearStartDate" [(end)]="budget.financialYearEndDate" required></ngx-date-range>
+        <ngx-date-range [(start)]="budget.financialYearStartDate" [(end)]="budget.financialYearEndDate" required></ngx-date-range>
         </div>
       </div>
+
       <div class="form-group row">
-       <div class="col">
+       <div class="col-sm-7">
         <label>Total amount</label>
         <app-amount-input [(value)]="budget.totalBudgetAmount" required></app-amount-input>
        </div>
       </div>
-      <div class="form-group row" style="margin-top: 20px">
-        <div class="col">
+
+      <div class="form-group row">
+        <div class="col-sm-8">
           <label></label>
         <button nbButton status="primary" (click)="addBudget()" [disabled]="!disableSubmitbtn">Save and Continue</button>
         </div>
       </div>
-    </div>
-  </div>
+
  </form>
 </ng-template>
 
 <ng-template [ngIf]="page === 2">
-    <h4>Update Budget Item</h4>
+    <h4>Add Budget Item</h4>
       <form #editItem="ngForm" name="editItem">
           <div class="form-group row">
             <div class="col-sm-2">
@@ -41,6 +40,18 @@
             </div>
             <div class="col-sm-5">
               <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="disBudgetItem.name" required>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <div class="col-sm-2">
+              <label>Budget</label>
+            </div>
+            <div class="col-sm-5">
+              <select name="budget" #budget="ngModel" [(ngModel)]="myBudget.id" class="form-control">
+                <option value=""> Select Budget Financial Year</option>
+                <option *ngFor="let budget of myBudget" [value]="budget.id">{{budget.financialYearStartDate	 | date : 'longDate'}} - {{budget.financialYearEndDate | date : 'longDate'}}</option>
+              </select>
             </div>
           </div>
 
