--- a/src/app/modules/disbursement/overall-budget/overall-budget.component.html
+++ b/src/app/modules/disbursement/overall-budget/overall-budget.component.html
@@ -16,7 +16,7 @@
   </ngx-componentsheader>
 
 
-  <div style="background-color: white; min-height: 10vh">
+  <div style="background-color: white; min-height: 10vh; margin-bottom: 10px;">
     <div class="row" style="padding-top: 1rem; padding-bottom: 1rem">
       <div class="col-sm-6">
         <div
@@ -112,9 +112,10 @@
     pageName="Budget Items"
     [requiredButton]="topActionButtons"
     (buttonClick)="modalShow()"
-  ></ngx-componentsheader>
+    style="padding-top: 10px;"
+   ></ngx-componentsheader>
 
-  <ngx-template *ngIf="finLoading == false">
+  <ngx-template *ngIf="finLoading == false && finYear.length > 0">
     <div class="row">
       <div class="col-sm-4"  *ngFor="let budget of allBudgetItems">
         <div
@@ -178,13 +179,22 @@
     </div>
   </ngx-template>
 
-  <!-- <ngx-template *ngIf="finLoading == true">
+  <ngx-template *ngIf="finLoading == false && finYear.length < 0">
+    <div>
+      <nb-card>
+        <ngx-default-content [pageHeader]="noBudgetItem" [pageDescription]="noBudget" [buttonValue]="button" (buttonClick) = "modalShow()">
+        </ngx-default-content>
+      </nb-card>
+    </div>
+  </ngx-template>
+
+  <ngx-template *ngIf="finLoading == true">
     <div *ngIf="finLoading == true" style="background-color: white; min-height: 10vh;width: 100%;display: flex;justify-content: center;align-items: center;">
       <div style="font-size: 32px;">
         <i class="fa fa-spin fa-spinner"></i>&nbsp;Loading...
       </div>
     </div>
-  </ngx-template> -->
+  </ngx-template>
 
   <div>
     <ngx-side-modal [(show)]='addItemModal' style="width: 500px;">
@@ -194,7 +204,8 @@
           <div class="row">
             <div class="form-group col">
               <label>Budget</label>
-              <select name="budget" class="form-control">
+              <select name="budget" #budget="ngModel" [(ngModel)]="myBudget.id" class="form-control">
+                <option value=""> Select Budget Financial Year</option>
                 <option *ngFor="let budget of myBudget" [value]="budget.id">{{budget.financialYearStartDate	 | date : 'longDate'}} - {{budget.financialYearEndDate | date : 'longDate'}}</option>
               </select>
             </div>
@@ -226,8 +237,8 @@
             <div class="col">
               <label>Department</label>
               <select class="form-control" name="department" #department="ngModel" [(ngModel)]="departments.code" required>
-                <option value="1">Select Department</option>
-                <option *ngFor="let dep of allDepartments" value="dep.code">{{dep.name}}</option>
+                <option value="">Select Department</option>
+                <option *ngFor="let dep of allDepartments" [value]="dep.code">{{dep.name}}</option>
               </select>
             </div>
             </div>
@@ -253,7 +264,7 @@
               <label></label>
               <div>
                   <button nbButton status="primary" outline class="white-background mr-2">Cancel</button>
-                  <button nbButton status="primary">Save</button>
+                  <button nbButton status="primary" (click)="addBudgetItem()">Save</button>
               </div>
             </div>
         </div>
@@ -324,16 +335,15 @@
   </ngx-side-modal> -->
 
   <ngx-side-modal [(show)]='editBudgetModal' style="width: 500px;">
-  <h4 modal-header>Set up your overall budget</h4>
+  <div modal-header>Update budget</div>
   <div class="row" modal-body>
-    <div class="col-sm-6 linear-form">
       <div class="form-group row">
         <div class="col">
           <label>Financial Year</label>
-        <ngx-date-range style="width: 60%;"></ngx-date-range>
+          <ngx-date-range></ngx-date-range>
         </div>
-
       </div>
+
       <div class="form-group row">
        <div class="col">
         <label>Total amount</label>
@@ -341,10 +351,10 @@
        </div>
       </div>
       <div class="form-group row" style="margin-top: 20px">
-        <label></label>
-        <button nbButton status="primary" (click)="addBudget()">Save and Continue</button>
+       <div class="col">
+        <button nbButton status="primary" (click)="addBudget()">Update Budget</button>
+       </div>
       </div>
-    </div>
   </div>
   </ngx-side-modal>
 
